Create flex box practice area

--- a/flex-basis.html
+++ b/flex-basis.html
@@ -2,20 +2,31 @@
 <html>
 
 <head>
-  <title>Flexbox practice</title>
+  <title>Flex Justify</title>
   <link href="resources/css/style.css" type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
 
 <body>
   <nav>
-    <p>Contents</p>
+    <a href="index.html">Home</a>
     <ul>
-    <li><a href="flex-basis.html">Flex basis</a></li>
+    <li><a href="flex-basis.html"><em>Flex basis</em></a></li>
     <li><a href="flex-justify.html">Flex justify</a></li>
     <li><a href="flexbox-review.html">Flexbox review</a></li>
     </ul>
   </nav>
+  <div class="container">
+  <div class=”side”>
+    <h1>Left side!</h1>
+  </div>
+  <div class="center">
+    <h1>Center!</h1>
+  </div>
+  <div class="side">
+    <h1>Right side!</h1>
+  </div>
+</div>
 </body>
 
 </html>
